<resources>
    <string name="app_name">Click-Away</string>
    <string name="hospitals">Hospital</string>
    <string name="help">HELP!</string>
    <string name="drug_store">Drug Store</string>
    <string name="sos">SOS</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="welcome">Welcome to Click-Away</string>
    <string name="tagline">Now, Your safekeepers are just a "Click-Away"</string>
    <string name="warning">Warning : This is a Demo App</string>
    <string name="read_priavcy_policy_here">Tap here to read Privacy Policy</string>
    <string name="permissions_reason">
        <i>On the next Screen, Provide Following Permissions as for mentioned reasons: </i>\n
        <b> 1. Contacts :   </b>To enable selection of Emergency Contacts and getting their Names and Phone Numbers to send SMS when needed.\n
        <b> 2. SMS :        </b>To enable to send SMS without opening SMS Application.\n
        <b> 3. Location :   </b>To share your location in SMS and also present Hospitals, Chemists and Blood Banks near you.\n
        <b> 4. Phone :      </b>To access Mobile Network and WiFi based location, this helps in getting GPS results faster.\n
        <b> 5. Audio :      </b>To enable you to record your own Emergency Message.\n
        <b> 6. Storage :    </b>To store your recorded message on the device.\n
        <b> 7. Write System Settings :</b>To control brightness while showing Help Dialog.\n
    </string>
    <string name="privacy_policy">https://docs.google.com/document/d/1etloEvZLytV1Xkjugk_4njgn7s8e_aXlXTF32HWn1Wo/</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="allergies">Allergies:</string>
    <string name="current_medications">Current Medications:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="enter_information">Please enter the following information about yourself:</string>
    <string name="your_emergency_voice_message">Your Emergency Voice Message</string>
    <string name="play">Play</string>
    <string name="record_new">Record New</string>
    <string name="emergency_contacts">Select your emergency contacts:</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="sms_message">I am in Emergency, Please Help me.  My last location was :</string>
    <string name="g_maps_url">https://www.google.co.in/maps/</string>
    <string name="permissions_necessary">These permissions are necessary for app to function!</string>
    <string name="cancel">Cancel</string>
    <string name="send_report">Send Report</string>
    <string name="near_blood_banks">Blood Banks near Your Location:</string>
    <string name="near_drug_stores">Drug Stores near Your Location:</string>
    <string name="near_hospitals">Hospitals near Your Location:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
