<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:textSize="34sp"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tagline"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/warning"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="32sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/privacy_policy_btn"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/read_priavcy_policy_here"
            android:textColor="@color/text_black"
            android:src="@drawable/roundedbutton"
            android:background="@color/white"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            android:textColor="@color/text_black"
            android:text="@string/permissions_reason"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
