<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="msahil432.click_away.User" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_information"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/text_black"
            android:textStyle="bold"/>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:mtf_labelColor="@color/text_black">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@{user.name}"
                android:inputType="none"
                android:textColor="@color/text_black"
                android:textSize="18sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:mtf_labelColor="@color/text_black">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:text="@{user.age}"
                android:inputType="none"
                android:textColor="@color/text_black"
                android:textSize="18sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:mtf_labelColor="@color/text_black">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_group"
                android:text="@{user.bloodGroup}"
                android:inputType="none"
                android:textColor="@color/text_black"
                android:textSize="18sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:mtf_labelColor="@color/text_black">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/allergies"
                android:text="@{user.allergies}"
                android:inputType="none"
                android:textColor="@color/text_black"
                android:textSize="18sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:mtf_labelColor="@color/text_black">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_medications"
                android:text="@{user.medications}"
                android:inputType="none"
                android:textColor="@color/text_black"
                android:textSize="18sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>
    </LinearLayout>
    </ScrollView>
</layout>