<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".mainActivity.MainActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/main_sos_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1px"
        android:background="@color/sos_color"
        android:text="@string/sos"
        android:textSize="40sp"
        android:gravity="top|center"
        android:paddingTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/main_blood_btn"
        app:layout_constraintEnd_toStartOf="@+id/main_drug_store_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/main_drug_store_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/drug_store"
        android:text="@string/drug_store"
        android:textSize="40sp"
        android:gravity="top|center"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/main_hospitals_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_sos_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/main_blood_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blood_bank_color"
        android:text="@string/blood_bank"
        android:textSize="40sp"
        android:gravity="bottom|center"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_hospitals_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_sos_btn" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/main_hospitals_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/hospital_color"
        android:text="@string/hospitals"
        android:textSize="40sp"
        android:gravity="bottom|center"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_blood_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_drug_store_btn" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/main_help_btn"
        android:layout_width="256dp"
        android:layout_height="0dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/red"
        android:text="@string/help"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/main_hospitals_btn"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_sos_btn" />
</android.support.constraint.ConstraintLayout>